--- a/config/database.yml
+++ b/config/database.yml
@@ -7,9 +7,8 @@ development:
   adapter: postgresql
   database: mywebsite
   pool: 5
-  host: localhost
-  username: action
-  password: 
+  username: postgres
+  password: 1
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
