--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ development:
   adapter: postgresql
   database: mywebsite
   pool: 5
-  username: postgres
+  username: action
   password: 1
 
 # Warning: The database defined as "test" will be erased and
@@ -17,14 +17,14 @@ test: &test
   adapter: postgresql
   database: mywebsite
   pool: 5
-  username: postgres
+  username: action
   password: 1
 
 production:
   adapter: postgresql
   database: mywebsite
   pool: 5
-  username: postgres
+  username: action
   password: 1
 
 cucumber:
